
public class PizzaCheeseStyleStrasbourg extends Pizza{

}
