
public class PizzaPoivronStyleStrasbourg extends Pizza{

}
