package pizza;

abstract public class PizzaFactory {
	
	abstract public Pizza create(String name);

}
