package pizza;
public class PizzaGrecqueStyleBrest extends Pizza{

}
