package pizza;
public class PizzaGrecqueStyleStrasbourg extends Pizza{

}
